--- a/package.json
+++ b/package.json
@@ -10,22 +10,20 @@
     "lunr": "^2.3.6"
   },
   "devDependencies": {
-    "front-matter": "^3.0.1",
-    "fuse.js": "^3.4.4",
-    "hackmyresume": "^1.9.0-beta",
-    "highlight.js": "^9.15.6",
-    "jsonresume-theme-classy": "^1.0.9",
-    "jsonresume-theme-kendall": "^0.1.19",
-    "jsonresume-theme-slick": "^0.1.16",
-    "jsonresume-theme-stackoverflow": "^1.4.0",
-    "marked": "1.1.1",
-    "node-fetch": "^2.3.0",
-    "wordpress-export-to-markdown": "^1.0.1"
+    "front-matter": "3.0.1",
+    "fuse.js": "3.4.4",
+    "hackmyresume": "1.9.0-beta",
+    "highlight.js": "10.6.0",
+    "jsonresume-theme-classy": "1.0.9",
+    "jsonresume-theme-kendall": "0.1.19",
+    "jsonresume-theme-slick": "0.1.16",
+    "jsonresume-theme-stackoverflow": "1.4.0",
+    "marked": "2.0.1",
+    "wordpress-export-to-markdown": "1.0.1"
   },
   "scripts": {
-    "rebuild": "node tools/generator/index.js",
-    "build-resume": "npx hackmyresume build data/resume/resume.en.json --theme themes/jsonresume-theme-stackoverflow/",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "rebuild": "node tools/generate.js",
+    "build-resume": "npx hackmyresume build data/resume/resume.en.json --theme themes/jsonresume-theme-stackoverflow/"
   },
   "repository": {
     "type": "git",
